crates/alien-terraform/tests/generator/snapshots/generator__generator__helpers__azure_queue_minimal.snap
---
source: crates/alien-terraform/tests/generator/helpers.rs
expression: buf
---
=== versions.tf ===
terraform {
  required_version = ">= 1.5.0"

  required_providers {
    azurerm = {
      source  = "hashicorp/azurerm"
      version = ">= 4.75, < 5.0"
    }
    random = {
      source  = "hashicorp/random"
      version = ">= 3.6"
    }
  }
}

=== variables.tf ===
variable "resource_prefix" {
  type        = string
  description = "Optional stable physical resource prefix. Leave empty to generate one."
  default     = ""

  validation {
    condition     = var.resource_prefix == "" || (can(regex("^[a-z][a-z0-9-]{1,38}[a-z0-9]$", var.resource_prefix)) && length(regexall("--", var.resource_prefix)) == 0)
    error_message = "resource_prefix must be 3-40 characters: lowercase letters, numbers, and hyphens; start with a letter; end with a letter or number; and not contain consecutive hyphens."
  }
}

variable "name" {
  type        = string
  description = "Human-readable application name shown in setup and cloud IAM review metadata."
}

variable "token" {
  type        = string
  description = "Install token from the application setup page. This is the same token used by the deploy CLI --token flag."
  sensitive   = true
}

variable "management_url" {
  type        = string
  description = "Optional management endpoint used by pull-style runtimes."
  default     = ""
}

variable "deployment_model" {
  type        = string
  description = "How runtime updates are delivered after setup."
  default     = "push"

  validation {
    condition     = contains(["push", "pull"], var.deployment_model)
    error_message = "deployment_model must be one of: push, pull."
  }
}

variable "advanced_settings_json" {
  type        = string
  description = "Advanced JSON-encoded deployment settings. Most installations should use the typed variables in this module instead."
  default     = "{}"
  sensitive   = true
}

variable "advanced_settings_overlay_json" {
  type        = string
  description = "JSON-encoded deployment settings merged over the package defaults. Use this for partial advanced-setting overrides that must preserve generated defaults such as compute selections."
  default     = "{}"
  sensitive   = true
}

variable "endpoint_access" {
  type        = string
  description = "Who can reach this deployment's endpoints. Private access requires AWS managed containers and cannot change after setup."
  default     = "internet"

  validation {
    condition     = contains(["internet", "private"], var.endpoint_access)
    error_message = "endpoint_access must be one of: internet, private."
  }
}

variable "updates_mode" {
  type        = string
  description = "How application updates are delivered after setup."
  default     = "auto"

  validation {
    condition     = contains(["auto", "approval-required"], var.updates_mode)
    error_message = "updates_mode must be one of: auto, approval-required."
  }
}

variable "telemetry_mode" {
  type        = string
  description = "How logs, metrics, and traces are collected."
  default     = "auto"

  validation {
    condition     = contains(["off", "auto", "approval-required"], var.telemetry_mode)
    error_message = "telemetry_mode must be one of: off, auto, approval-required."
  }
}

variable "heartbeats_mode" {
  type        = string
  description = "Whether runtime health checks are enabled."
  default     = "on"

  validation {
    condition     = contains(["off", "on"], var.heartbeats_mode)
    error_message = "heartbeats_mode must be one of: off, on."
  }
}

variable "azure_location" {
  type        = string
  description = "Azure location."
  default     = "eastus"
}

variable "azure_subscription_id" {
  type        = string
  description = "Azure subscription ID hosting the stack."
}

variable "azure_resource_group_name" {
  type        = string
  description = "Azure resource group name."
}

=== providers.tf ===
provider "azurerm" {
  resource_provider_registrations = "none"

  features {
    persist_id_on_create_before_polling_for_completion = true

    resource_group {
      prevent_deletion_if_contains_resources = true
    }
  }
}

=== resource_prefix.tf ===
resource "random_id" "resource_prefix" {
  byte_length = 4
}

=== locals.tf ===
locals {
  resource_prefix              = var.resource_prefix == "" ? format("a%s", random_id.resource_prefix.hex) : var.resource_prefix
  deployment_name              = var.name
  deployment_platform          = "azure"
  deployment_target            = "azure"
  deployment_region            = var.azure_location
  deployment_management_config = null
  advanced_settings            = merge(jsondecode(var.advanced_settings_json), jsondecode(var.advanced_settings_overlay_json))
  deployment_settings          = merge(local.advanced_settings, { deploymentModel = var.deployment_model, updates = var.updates_mode, telemetry = var.telemetry_mode, heartbeats = var.heartbeats_mode, endpointAccess = var.endpoint_access })
  deployment_resources = [
    {
      id   = "default-resource-group"
      type = "azure_resource_group"
      importData = {
        subscriptionId = var.azure_subscription_id
        resourceGroup  = azurerm_resource_group.default_resource_group.name
        location       = azurerm_resource_group.default_resource_group.location
      }
    },
    {
      id   = "default-service-bus-namespace"
      type = "azure_service_bus_namespace"
      importData = {
        subscriptionId = var.azure_subscription_id
        resourceGroup  = var.azure_resource_group_name
        namespaceName  = azurerm_servicebus_namespace.default_service_bus_namespace.name
        endpoint       = "${azurerm_servicebus_namespace.default_service_bus_namespace.name}.servicebus.windows.net"
      }
    },
    {
      id   = "jobs"
      type = "queue"
      importData = {
        subscriptionId = var.azure_subscription_id
        resourceGroup  = var.azure_resource_group_name
        namespaceName  = azurerm_servicebus_namespace.default_service_bus_namespace.name
        queueName      = azurerm_servicebus_queue.jobs.name
      }
    }
  ]
}

=== default_resource_group.tf ===
resource "azurerm_resource_group" "default_resource_group" {
  name     = var.azure_resource_group_name
  location = var.azure_location
  tags = {
    "managed-by"    = "setup"
    deployment      = local.resource_prefix
    resource        = "default-resource-group"
    "resource-type" = "resource-group"
  }
}

=== default_service_bus_namespace.tf ===
resource "azurerm_servicebus_namespace" "default_service_bus_namespace" {
  name                = format("%s-bus-%s", trim(substr(lower("a-${local.resource_prefix}"), 0, 37), "-"), substr(sha1(local.resource_prefix), 0, 8))
  resource_group_name = var.azure_resource_group_name
  location            = var.azure_location
  sku                 = "Standard"
  tags = {
    "managed-by"    = "setup"
    deployment      = local.resource_prefix
    resource        = "default-service-bus-namespace"
    "resource-type" = "service-bus-namespace"
  }
  depends_on = [
    azurerm_resource_group.default_resource_group
  ]
}

=== jobs.tf ===
resource "azurerm_servicebus_queue" "jobs" {
  name                                 = "${local.resource_prefix}-jobs"
  namespace_id                         = azurerm_servicebus_namespace.default_service_bus_namespace.id
  partitioning_enabled                 = false
  lock_duration                        = "PT30S"
  default_message_ttl                  = "P14D"
  max_delivery_count                   = 10
  dead_lettering_on_message_expiration = true
  depends_on = [
    azurerm_resource_group.default_resource_group
  ]
}

=== registration.tf ===
resource "terraform_data" "deployment_registration" {
  input = {
    platform                    = local.deployment_platform
    token                       = var.token
    name                        = var.name
    resource_prefix             = local.resource_prefix
    setup_target                = ""
    setup_import_format_version = 1
    setup_fingerprint           = ""
    setup_fingerprint_version   = 0
    management_url              = var.management_url
    management_config           = local.deployment_management_config
    stack_settings              = local.deployment_settings
    resources                   = local.deployment_resources
    inputValues                 = {}
  }
  depends_on = [
    azurerm_resource_group.default_resource_group,
    azurerm_servicebus_namespace.default_service_bus_namespace,
    azurerm_servicebus_queue.jobs
  ]
}

=== outputs.tf ===
output "deployment_target" {
  value       = "azure"
  description = "Terraform module target."
}

output "deployment_resource_prefix" {
  value       = local.resource_prefix
  description = "Physical resource prefix."
}

output "deployment_platform" {
  value       = local.deployment_platform
  description = "Target platform."
}

output "deployment_region" {
  value       = local.deployment_region
  description = "Target cloud region or location."
}

output "deployment_setup_target" {
  value       = ""
  description = "Setup target."
}

output "deployment_setup_import_format_version" {
  value       = 1
  description = "Setup registration payload format version."
}

output "deployment_setup_fingerprint" {
  value       = ""
  description = "Setup compatibility fingerprint."
}

output "deployment_setup_fingerprint_version" {
  value       = 0
  description = "Setup fingerprint algorithm version."
}

output "deployment_management_config" {
  value       = jsonencode(local.deployment_management_config)
  description = "Deployment registration management configuration JSON."
}

output "deployment_stack_settings" {
  value       = jsonencode(local.deployment_settings)
  description = "Deployment registration settings JSON."
  sensitive   = true
}

output "deployment_resources" {
  value       = jsonencode(local.deployment_resources)
  description = "Deployment registration resource metadata JSON."
}

=== README.md ===
# Deployment setup - acme-queue

Target: `azure`.

This module creates setup-owned infrastructure, grants the management access needed after setup, and prepares deployment registration metadata. Review the generated `.tf` files before applying; each resource file maps to one setup resource.

## Inputs

Required:

- `token`: install token from the setup page.
- `name`: deployment name to include in the registration metadata.

Common optional settings:

- `resource_prefix`: stable physical-name prefix. Leave empty to generate one.
- `management_url`: optional management endpoint used by pull-style runtimes.
- `deployment_model`: `push` or `pull`.
- `updates_mode`: `auto` or `approval-required`.
- `telemetry_mode`: `off`, `auto`, or `approval-required`.
- `heartbeats_mode`: `off` or `on`.
- `advanced_settings_json`: complete advanced deployment settings JSON. Most installs should keep the generated default.
- `advanced_settings_overlay_json`: partial advanced settings merged over package defaults, preserving generated values such as compute selections.

Azure settings:

- `azure_subscription_id`: target subscription ID.
- `azure_location`: Azure location.
- `azure_resource_group_name`: target resource group name.
- `azure_managing_tenant_id`, `azure_oidc_issuer`, `azure_oidc_subject`: management identity trust settings when this setup grants Azure management access.

## Run

Use your organization's normal backend and approval workflow. A typical local review looks like:

```bash
export TF_VAR_name="acme-queue"
export TF_VAR_token="..."
terraform init
terraform validate
terraform plan -out=tfplan
terraform apply tfplan
```

## Registration

This module exposes `deployment_management_config`, `deployment_stack_settings`, `deployment_resources`, and (when the stack declares deployer inputs) `deployment_input_values` outputs for registration flows managed outside Terraform.

## Outputs

- `deployment_management_config`: management endpoint and credential-boundary metadata.
- `deployment_stack_settings`: deployment settings JSON assembled from typed variables, package defaults, and advanced-setting overlays.
- `deployment_resources`: setup-owned resource metadata handed to the deployment runtime.
- `deployment_input_values`: deployer input values JSON, emitted only when the stack declares deployer inputs.
- `deployment_id` and `deployment_token`: emitted only when Terraform performs registration.
